完成新版机械动力组合启动不崩溃测试

--- a/docs/Games/MC/Create/机械动力模组版本搭配.md
+++ b/docs/Games/MC/Create/机械动力模组版本搭配.md
@@ -37,12 +37,20 @@ with links:
 |11| Create: Crystal Clear | [link](https://www.curseforge.com/minecraft/mc-mods/create-crystal-clear) |
 |12| Create Chunkloading | [link](https://www.curseforge.com/minecraft/mc-mods/create-chunkloading) |
 
+more dependencies' links:
+
+| Number |       Name       |                       Link(Curseforge)                       |
+| :----: | :--------------: | :----------------------------------------------------------: |
+|   1    | Cloth Config API | [link](https://www.curseforge.com/minecraft/mc-mods/cloth-config) |
+|   2    | Architectury API | [link](https://www.curseforge.com/minecraft/mc-mods/architectury-api) |
+
 
 
 ## Table
 
-| Number | Create | Flywheel | Forge | Optifine | Create Addition | Create Stuff Additions | Create Deco | Create Confectionery | Create Plus | Create: Crystal Clear | Minecraft |
-|---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
-| 1 | 0.5.0.c | 0.6.4 | 40.1.52 | HD_U_H6/H7 | 20220715a | 1.1.8 | 1.2.9 | 1.0.8 | 0.5.1 |-| 1.18.2 |
-| 2 | 0.5.0.d/e |0.6.5|40.1.73|HD_U_H9_pre1| 20220914a | 2.0.1c | 1.2.11 | 1.0.8 | 0.5.1a |0.1.2e|1.18.2|
+| Number | will work | Create | Flywheel | Forge | Optifine | Create Addition | Create Stuff Additions | Create Deco | Create Confectionery | Create Plus | Create: Crystal Clear | Create Chunkloading | Minecraft | Cloth Config API | Architectury API |
+|---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|:---:|
+| 1 | yes | 0.5.0.c | 0.6.4 | 40.1.52 | HD_U_H6/H7 | 20220715a | 1.1.8 | 1.2.9 | 1.0.8 | 0.5.1 |-| - | 1.18.2 | - | - |
+| 2 | yes | 0.5.0.d/e |0.6.5|40.1.73|HD_U_H9_pre1| 20220914a | 2.0.1c | 1.2.11 | 1.0.8 | 0.5.1a |0.1.2e|-|1.18.2|        -         |        -         |
+| 3 | yes | 0.5.0.i |0.6.8.a|40.2.1|HD_U_H9_pre2| 20221219a | 2.0.2a | 1.2.12 | 1.0.8 | 0.5.1a |0.1.3e|1.2.1|1.18.2| 6.4.90 | 4.10.88 |
 
