--- a/docs/设想/贴吧帖子展现结构.md
+++ b/docs/设想/贴吧帖子展现结构.md
@@ -4,7 +4,7 @@
 
 
 
-期望样例1：[../Vagrant/Vagrant和虚拟机和适用用途.md](../Vagrant/Vagrant和虚拟机和适用用途.md)
+期望样例1：[../Vagrant/Vagrant和虚拟机和适用用途.md](../Vagrant/Vagrant和虚拟机和适用用途.md)，保存的效果页：[Vagrant和虚拟机和适用用途_saved1.html](Vagrant和虚拟机和适用用途_saved1.html)。
 
 附加：
 
