--- a/docs/进程与线程是什么.md
+++ b/docs/进程与线程是什么.md
@@ -2,8 +2,6 @@
 date: 2023-2-8 10:59:00 +0800
 ---
 
-
-
 # 进程与线程是什么
 
 Links:
@@ -15,9 +13,9 @@ Links:
 
 进程（Process），线程（Thread）。
 
-至于子进程，那还是个进程，只是具有隶属关系而已，不是在于同一个进程之下，只是逻辑上可能会有控制上的隶属。在实际开发中，也有可能指的是线程而不是进程，看具体情况。辨别是进程还是线程看怎么创建的，进程都是`fork()`的，线程都是`proceed_c,,.()`的。
+至于子进程，那还是个进程，只是具有隶属关系而已，不是在于同一个进程之下，只是逻辑上可能会有控制上的隶属。在实际开发中，也有可能指的是线程而不是进程，看具体情况。辨别是进程还是线程看怎么创建的，进程都是`fork()`的，线程都是`pthread_create()`的。
 
-进程和线程其实都是CPU执行时间中的时间段概念，不过进程通常的意义不太一样，是编程语言对其具体实现的隐藏。简单来说，理解成*1*的比喻是可以的：<mark style="color:red">**进程=火车，线程=车厢**</mark>。
+进程和线程其实都是CPU执行时间中的时间段概念，不过进程通常的意义不太一样，是编程语言对其具体实现的隐藏。简单来说，理解成*1*的比喻是可以的：<mark style="color:red"><strong>进程=火车，线程=车厢</strong></mark>。
 
 事实上，两者的执行都有一个“执行环境”，也叫做“上下文”。所有线程共用进程的上下文，并拥有自己的上下文。在执行时间开销上，也是切换线程上下文的比切换进程的要少的多。
 
