上传最近这些天的文档

--- a/docs/Linux/信号量.md
+++ b/docs/Linux/信号量.md
@@ -12,7 +12,9 @@ links:
 
 4. <https://cloud.tencent.com/developer/article/1673387>
 
-   ## Mine
+   
+   
+## Mine
 
 信号量：*Semaphore*，也被称作 *信号灯*。
 
@@ -28,6 +30,14 @@ links:
 
 ![信号量PV操作与进程示意](信号量.assets/信号量PV操作与进程示意.png)
 
+### SEM_UNDO
+
+对于SEM_UNDO来说，内核记录的信息是**跟进程相关的**。**一个进程在lock的时候设置一个UNDO，那么对应该进程的UNDO计数就多一个，unlock的时候设置一个UNDO，那么计数就减一个**。对于临界区互斥的应用而言，lock和unlock都是在一个进程当中完成，于是UNDO可以切实发挥作用。
+
+> 然而，如果是一个进程lock，而另一个进程unlock（此情况表面没有做到临界区互斥），那么使用UNDO就不起作用了，而且由于都是单边操作，导致UNDO计数对单一进程而言，只朝一个方向发展，最后必定是超过内核限制值，这时会出现ERANGE的错误。
+
+**互斥**：任何时刻，**互斥**保证有且只有一个执行流进入**临界**区，访问临界资源，通常对临界资源起到保护作用。
+
 ## 1
 
 
@@ -37,7 +47,7 @@ links:
 sem_op : 如果其值为正数，该值会加到现有的信号内含值中。通常用于释放所控资源的使用权；如果sem_op的值为负数，而其绝对值又大于信号的现值，操作将会阻塞，直到信号值大于或等于sem_op的绝通常用于获取资源的使用权；如果sem_op的值为0，则操作将暂时阻塞，直到信号的值变为0。
 
 ``` c
-struct   sembuf{
+struct   sembuf{	// 暂存：操作某个信号量的信息
 	 unsigned short  sem_num;//第几个信号量，第一个信号量为0
      short  sem_op;//对该信号量的操作。
      short _semflg;
@@ -53,20 +63,21 @@ int    semop(int   semid, struct    sembuf   *_sops, size_t  _nsops);
 返回值：成功返回0，失败返回-1；
 参数：
 
-   _semid : 信号量的标识码。也就是semget（）的返回值。
+   _semid : 信号量的标识码。也就是semget（）的返回值。	// 	信号量集的id
 
-  _sops是一个指向结构体数组的指针。
+  _sops是一个指向结构体数组的指针。					 //   暂存的操作信息
 
- struct   sembuf{
-	 unsigned short  sem_num;//第几个信号量，第一个信号量为0
-     short  sem_op;//对该信号量的操作。
-     short _semflg;
- };
-sem_num:  操作信号在信号集中的编号。第一个信号的编号为0；
-sem_op : 如果其值为正数，该值会加到现有的信号内含值中。通常用于释放所控资源的使用权；如果sem_op的值为负数，而其绝对值又大于信号的现值，操作将会阻塞，直到信号值大于或等于sem_op的绝通常用于获取资源的使用权；如果     	
-sem_op的值为0，则操作将暂时阻塞，直到信号的值变为0。
-_semflg: IPC_NOWAIT //对信号的操作不能满足时，semop()不会阻塞，并立即返回，同时设定错误信息。
-SEM_UNDO //程序结束时(不论正常或不正常)，保证信号值会被重设为semop()调用前的值。这样做的目的在于避免程序在异常情况下结束时未将锁定的资源解锁，造成该资源永远锁定。
+     struct   sembuf{
+         unsigned short  sem_num;//第几个信号量，第一个信号量为0
+         short  sem_op;//对该信号量的操作。
+         short _semflg;
+     };
+    sem_num:  操作信号在信号集中的编号。第一个信号的编号为0；
+    sem_op : 如果其值为正数，该值会加到现有的信号内含值中。通常用于释放所控资源的使用权；如果sem_op的值为负数，而其绝对值又大于信号的现值，操作将会阻塞，直到信号值大于或等于sem_op的绝通常用于获取资源的使用权；如果sem_op的值为0，则操作将暂时阻塞，直到信号的值变为0。
+    _semflg: 
+		IPC_NOWAIT //对信号的操作不能满足时，semop()不会阻塞，并立即返回，同时设定错误信息。
+    	SEM_UNDO //程序结束时(不论正常或不正常)，保证信号值会被重设为semop()调用前的值。这样做的目的在于避免程序在异常情况下结束时未将锁定的资源解锁，造成该资源永远锁定。
+    
 nsops：操作结构的数量，恒大于或等于1。
 ```
 
