加一点这几天学的东西

--- a/docs/VM/配置虚拟交换器.md
+++ b/docs/VM/配置虚拟交换器.md
@@ -43,4 +43,25 @@ end
 2. 内部网络：（**虚拟机和虚拟机之间，虚拟机和宿主机之间通讯，可以通过宿主机访问物理网络**）
 3. 专用网络（**一个独立的虚拟网络，与其他网络完全隔离**）
 
+此外，如果是内部或者专用，那么虚拟机需要**手动设置IP**，不能使用DHCP，否则无法连接成功。
+
 这样懂了吗？
+
+## 样例
+
+### 专用
+
+如下“内部”的配置，能够ping通，能够FTP。这个时候物理机不会多出一个网卡，因为不连接物理机。
+
+### 内部
+
+这是虚拟机之间的，与物理机无关。我这样配置两台CentOS7虚拟机IP：
+
+| 编号 | IP            | 掩码          | 网关        |
+| :--: | ------------- | ------------- | ----------- |
+|  1   | 192.168.1.202 | 255.255.255.0 | 192.168.1.1 |
+|  2   | 192.168.1.204 | 255.255.255.0 | 192.168.1.1 |
+
+经测试能够连接成功，互相通信。（能够ping通，能够使用FTP。）
+
+但是，物理机无法ping通`192.168.1.1`、`192.168.1.202`、`192.168.1.204`，虚拟机无法ping通`192.168.1.1`。这里可能是我网段设置不合适吧，不太清楚。本来要是能ping通，那传文件就很容易。但是不通，那就只能虚拟机用物理机名去挂载文件夹了。
