--- a/docs/VM/配置虚拟交换器.md
+++ b/docs/VM/配置虚拟交换器.md
@@ -53,6 +53,15 @@ end
 
 如下“内部”的配置，能够ping通，能够FTP。这个时候物理机不会多出一个网卡，因为不连接物理机。
 
+其他配置也是可以的，例如：
+
+| 编号 | IP              | 掩码          | 网关          |
+| :--: | --------------- | ------------- | ------------- |
+|  1   | 192.168.138.202 | 255.255.255.0 | 192.168.138.1 |
+|  2   | 192.168.138.204 | 255.255.255.0 | 192.168.138.1 |
+
+可以ping通，可以FTP。
+
 ### 内部
 
 这是虚拟机之间的，与物理机无关。我这样配置两台CentOS7虚拟机IP：
@@ -65,3 +74,11 @@ end
 经测试能够连接成功，互相通信。（能够ping通，能够使用FTP。）
 
 但是，物理机无法ping通`192.168.1.1`、`192.168.1.202`、`192.168.1.204`，虚拟机无法ping通`192.168.1.1`。这里可能是我网段设置不合适吧，不太清楚。本来要是能ping通，那传文件就很容易。但是不通，那就只能虚拟机用物理机名去挂载文件夹了。
+
+## 离谱的事
+
+另外，有一件很离谱的事：如果你的虚拟机能够上网了，那一定是共享了物理机的网络。关于怎么搞，建议看那篇：【[../Windows/被HyperV搞坏热点](../Windows/被HyperV搞坏热点.md)】。如果你成功实现了虚拟机和热点都能上网，这件离谱的事就出现了：在虚拟机上ping通物理机需要你启用物理机的个人热点，因为名称的解析会是`192.168.137.1`。这样保证能ping通之后，就可以挂载物理机文件系统到虚拟机了。
+
+![image-20230303164636818](配置虚拟交换器.assets/image-20230303164636818.png)
+
+如图。
