又是一点东西

--- a/docs/VM/配置虚拟交换器.md
+++ b/docs/VM/配置虚拟交换器.md
@@ -75,6 +75,26 @@ end
 
 但是，物理机无法ping通`192.168.1.1`、`192.168.1.202`、`192.168.1.204`，虚拟机无法ping通`192.168.1.1`。这里可能是我网段设置不合适吧，不太清楚。本来要是能ping通，那传文件就很容易。但是不通，那就只能虚拟机用物理机名去挂载文件夹了。
 
+---
+
+2023.3.7：
+
+要在虚拟机和物理机之间ping通，要给物理机也设置ip和网关，例如这样的配置：
+
+|  编号  | IP              | 掩码          | 网关          |
+| :----: | --------------- | ------------- | ------------- |
+|   1    | 192.168.138.202 | 255.255.255.0 | 192.168.138.1 |
+|   2    | 192.168.138.204 | 255.255.255.0 | 192.168.138.1 |
+| 物理机 | 192.168.138.2   | 255.255.255.0 | 192.168.138.1 |
+
+![image-20230307093214309](配置虚拟交换器.assets/image-20230307093214309.png)
+
+这张图是在物理机上ping通了虚拟机。
+
+![image-20230307093607606](配置虚拟交换器.assets/image-20230307093607606.png)
+
+也能访问虚拟机FTP。
+
 ## 离谱的事
 
 另外，有一件很离谱的事：如果你的虚拟机能够上网了，那一定是共享了物理机的网络。关于怎么搞，建议看那篇：【[../Windows/被HyperV搞坏热点](../Windows/被HyperV搞坏热点.md)】。如果你成功实现了虚拟机和热点都能上网，这件离谱的事就出现了：在虚拟机上ping通物理机需要你启用物理机的个人热点，因为名称的解析会是`192.168.137.1`。这样保证能ping通之后，就可以挂载物理机文件系统到虚拟机了。
@@ -82,3 +102,9 @@ end
 ![image-20230303164636818](配置虚拟交换器.assets/image-20230303164636818.png)
 
 如图。
+
+---
+
+2023.3.7：
+
+关于这件离谱的事，可能是因为我本来就没有配置好互联，这里只是通过热点的137网段间接实现了连接吧。
