--- a/docs/VM/配置虚拟交换器.md
+++ b/docs/VM/配置虚拟交换器.md
@@ -108,3 +108,11 @@ end
 2023.3.7：
 
 关于这件离谱的事，可能是因为我本来就没有配置好互联，这里只是通过热点的137网段间接实现了连接吧。
+
+---
+
+2023.3.17:
+
+无法访问可能有非常多原因，有时候即便是用Windows的cifs协议连接网上邻居到物理机挂载到centos，这样也可能失败。有可能是上面那样要开个人热点，不过有的情况还是不行。顺便说一句，似乎linux开httpd服务也会导致虚拟机没有网络。反正实在不行就重启。
+
+还有一种情况，就是物理机连接了虚拟交换器并设置了ip，这就会导致虚拟机定向到物理机然后又定位到不合适的网关，而这个网关可能不存在或有连接限制（比如公司网）。这种情况可用试试禁用相应内部虚拟交换器，然后断开虚拟机连接，实在不行重启虚拟机，然后再连接虚拟机，这时候连接虚拟机用的ip可能就不是那个虚拟交换器的ip了。反正很玄学。
