--- a/docs/Linux/进程之间究竟有哪些通信方式？.md
+++ b/docs/Linux/进程之间究竟有哪些通信方式？.md
@@ -1,5 +1,27 @@
 # 进程之间究竟有哪些通信方式？
 
+links:
+
+- <https://blog.csdn.net/qq_38158479/article/details/103369456>
+
+
+
+## Mine
+
+> 部分内容可能摘抄自网络。
+
+进程之间的通信方式有：
+
+1、管道
+2、消息队列
+3、共享内存
+4、信号量
+5、Socket
+
+详细比较见【[IPC方式笔记1](IPC方式笔记1.md)】。
+
+## 1
+
 link: <https://blog.csdn.net/qq_38158479/article/details/103369456>
 
 酸菜。
@@ -9,13 +31,13 @@ link: <https://blog.csdn.net/qq_38158479/article/details/103369456>
 
 linux系统编程与内核编程 专栏收录该内容 81 篇文章
 
-## 正文
+### 正文
 
 有一次面试的时候，被问到进程之间有哪些通信方式，不过由于之前没深入思考且整理过，说的并不好。想必大家也都知道进程有哪些通信方式，可是我猜很多人都是靠着”背“来记忆的，所以今天的这篇文章，讲给大家详细着讲解他们是如何通信的，让大家尽量能够理解他们之间的区别、优缺点等，这样的话，以后面试官让你举例子，你也能够顺手拈来。
 
 *[跳转至总结](#总结)*
 
-### 1、管道
+#### 1、管道
 我们来看一条 Linux 的语句
 
 ``` bash
@@ -55,7 +77,7 @@ cat < test // 读数据
 
 所以管道不适合频繁通信的进程。当然，他也有它的优点，例如比较简单，能够保证我们的数据已经真的被其他进程拿走了。我们平时用 Linux 的时候，也算是经常用。
 
-### 2、消息队列
+#### 2、消息队列
 那我们能不能把进程的数据放在某个内存之后就马上让进程返回呢？无需等待其他进程来取就返回呢？
 
 答是可以的，我们可以用消息队列的通信模式来解决这个问题，例如 a 进程要给 b 进程发送消息，只需要把消息放在对应的消息队列里就行了，b 进程需要的时候再去对应的
@@ -65,24 +87,24 @@ cat < test // 读数据
 
 哪有没有什么解决方案呢？答是有的，请继续往下看。
 
-### 3、共享内存
+#### 3、共享内存
 共享内存这个通信方式就可以很好着解决拷贝所消耗的时间了。
 
 这个可能有人会问了，每个进程不是有自己的独立内存吗？两个进程怎么就可以共享一块内存了？
 
 我们都知道，系统加载一个进程的时候，分配给进程的内存并不是实际物理内存，而是虚拟内存空间。那么我们可以让两个进程各自拿出一块虚拟地址空间来，然后映射到相同的物理内存中，这样，两个进程虽然有着独立的虚拟内存空间，但有一部分却是映射到相同的物理内存，这就完成了内存共享机制了。
 
-### 4、信号量
+#### 4、信号量
 共享内存最大的问题是什么？没错，就是多进程竞争内存的问题，就像类似于我们平时说的线程安全问题。如何解决这个问题？这个时候我们的信号量就上场了。
 
 信号量的本质就是一个计数器，用来实现进程之间的互斥与同步。例如信号量的初始值是 1，然后 a 进程来访问内存1的时候，我们就把信号量的值设为 0，然后进程b 也要来访问内存1的时候，看到信号量的值为 0 就知道已经有进程在访问内存1了，这个时候进程 b 就会访问不了内存1。所以说，信号量也是进程之间的一种通信方式。
 
-### 5、Socket
+#### 5、Socket
 上面我们说的共享内存、管道、信号量、消息队列，他们都是多个进程在一台主机之间的通信，那两个相隔几千里的进程能够进行通信吗？
 
 答是必须的，这个时候 Socket 这家伙就派上用场了，例如我们平时通过浏览器发起一个 http 请求，然后服务器给你返回对应的数据，这种就是采用 Socket 的通信方式了。
 
-### 总结
+#### 总结
 所以，进程之间的通信方式有：
 
 1、管道
