编写和修改文档

--- a/docs/Games/MC/Create/机械动力模组版本搭配.md
+++ b/docs/Games/MC/Create/机械动力模组版本搭配.md
@@ -1,7 +1,7 @@
 ---
 date: 2023-2-2 15:44:00 +0800
-categories: MC, Create
-tags: versions, Create
+categories: [MC, Create]
+tags: [versions, Create]
 ---
 
 
