--- a/docs/Network/Router/PracticeLog/2023-7-8 光猫操作实践.md
+++ b/docs/Network/Router/PracticeLog/2023-7-8 光猫操作实践.md
@@ -78,3 +78,7 @@ date: 2023-7-8 13:02:00 +0800
 ![image-20230708141028931](2023-7-8 光猫操作实践.assets/image-20230708141028931.png)
 
 莫得。
+
+---
+
+2023-08-06: 已有[后文](2023-08-06 光猫操作实践2.md)。
